get rid of the space between the footer and the body

--- a/css/styles.css
+++ b/css/styles.css
@@ -271,6 +271,7 @@ body{
      padding: 24px 160px;
      background-color: #222222;
      color: #fff;
+     margin-bottom: 0px !important;
 }
 .site-footer .site-footer-list ul li a{
      color: #fff;
