--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@ html{
      text-decoration: none;
      padding: 12px 24px;
      border-radius: 8px;
-     margin-left: 114px;
+     /* margin-left: 114px; */
      font-family: 'Open Sans Condensed', sans-serif, "Open Sans";
      letter-spacing: 2px;
      font-weight: 700;
